rf/cambios sugeridos por SonarQube